 [tool.poetry]
name = "kotaemon-ui"
version = "0.0.1"
description = ""
authors = ["Dan Mueller <dsm@danmueller.pro>"]

[tool.poetry.dependencies]  # Cannot install graphrag due to dependency issues with kotaemon
python = ">=3.10,<3.12"
ktem = {path = "kotaemon/libs/ktem", develop = true}
kotaemon = {path = "kotaemon/libs/kotaemon", extras = ["dev", "adv"], develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"